@startuml

title __CODER's Class Diagram__\n

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      package com.myself.nettychat.bootstrap.coder {
        class ByteBufToWebSocketFrameEncoder {
            # encode()
        }
      }
    }
  }
  

  interface Sharable {
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.bootstrap {
      package com.myself.nettychat.bootstrap.coder {
        class WebSocketFrameToByteBufDecoder {
            # decode()
        }
      }
    }
  }
  

  interface Sharable {
  }
  

  ByteBufToWebSocketFrameEncoder -up-|> MessageToMessageEncoder
  ByteBufToWebSocketFrameEncoder +-down- Sharable
  WebSocketFrameToByteBufDecoder -up-|> MessageToMessageDecoder
  WebSocketFrameToByteBufDecoder +-down- Sharable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
